# thirdparty

./: .gitignore  CMakeLists.txt  README.md  bootstrap.sh  build_win.bat
 notused/: FindBison.cmake  FindFlex.cmake  flex.cmake
.github/workflows/: linux-tag.yml  linux.yml  mac-tag.yml  mac.yml  win-tag.yml  win.yml
cmake/: bison.cmake  clickhouse.cmake  curl.cmake  eigen.cmake  flex.cmake  gflags.cmake  glog.cmake  gmssl.cmake  gperf.cmake  gtest.cmake  jsoncpp.cmake  lua.cmake  lz4.cmake  mysql.cmake  openssl.cmake  protobuf.cmake  pybind11.cmake  rdkafka.cmake  rocksdb.cmake  snappy.cmake  sqlite3.cmake  talib.cmake  thirdparty.inc  unixodbc.cmake  zlib.cmake  zstd.cmake
contrib/: orc.txt  sqlite3.txt
modules/: ChangToMT.cmake  FindClickhouse.cmake  FindCurl.cmake  FindEigen.cmake  FindGflag.cmake  FindGlog.cmake  FindGmssl.cmake  FindGperf.cmake  FindGtest.cmake  FindJsoncpp.cmake  FindLua.cmake  FindLz4.cmake  FindMysql.cmake  FindOpenssl.cmake  FindProtobuf.cmake  FindRdkafka.cmake  FindRocksdb.cmake  FindSnappy.cmake  FindSqlite3.cmake  FindTalib.cmake  FindUnixodbc.cmake  FindZlib.cmake  FindZstd.cmake  deprecated_FindPybind11.cmake  include.cmake
test/: CMakeLists.txt
